# froma2

./: .gitignore  CMakeLists.txt  Impex_lib.cpp  Impex_module.h  LICENSE  LongReal_lib.cpp  LongReal_module.h  baseproject_lib.cpp  baseproject_module.h  cmdbuild.cmd  common_values.hpp  manufact_lib.cpp  manufact_module.h  progress_module.hpp  readme.txt  serialization_module.hpp  warehouse_lib.cpp  warehouse_module.h  winbuild.cmd
doc/: froma2.docx  readme.txt
examples/: readme.txt
examples/CCStorage/: CMakeLists.txt  main.cpp  pathes.h.in  readme.txt
examples/CCStorage/include/: clsCCStorageTest.h  clsCostCenterStorage.h  pathes.h
examples/CCStorage/inputdata/: pur_price.csv  recipe_in_0.csv  recipe_in_1.csv  recipe_in_2.csv  recipe_in_3.csv  recipe_in_4.csv  recipe_in_5.csv  recipe_in_6.csv  recipe_out_0.csv  recipe_out_1.csv  recipe_out_2.csv  recipe_out_3.csv  recipe_out_4.csv  recipe_out_5.csv  ship.csv
examples/CCStorage/src/: clsCCStorageTest.cpp  clsCostCenterStorage.cpp
examples/Impex_example/: CMakeLists.txt  main.cpp  readme.txt
examples/LR_stream/: CMakeLists.txt  main.cpp  readme.txt
examples/LongReal_test/: CMakeLists.txt  main.cpp  readme.txt
examples/LongReal_test/include/: LongRealTest.hpp
examples/ManufactItem_example/: CMakeLists.txt  main.cpp  readme.txt
examples/Manufactory_example/: CMakeLists.txt  main.cpp  readme.txt
examples/Manufactory_stress_test/: CMakeLists.txt  main.cpp  readme.txt
examples/Model_1/: CMakeLists.txt  main.cpp  pathes.h.in  readme.txt
examples/Model_1/config/: config.cfg  config_empty.cfg  config_empty_DB.cfg  config_full_allowed.cfg  config_full_allowed_DB.cfg
examples/Model_1/include/: clsEnterprise.h  pathes.h
examples/Model_1/inputdata/: about.txt  about_1.txt  readme_about_1.txt  recipe_0.csv  recipe_1.csv  recipe_11.csv  recipe_2.csv  recipe_22.csv  recipe_3.csv  recipe_30.csv  recipe_4.csv  recipe_5.csv  rowmatprices.csv  rowmatvolume.csv
examples/Model_1/outputdata/: f_mp_volume_LR.csv  f_ms_price_LR.csv  f_ms_volume_LR.csv  f_rb_price_LR.csv  f_rb_volume_LR.csv  f_rs_value_LR.csv  f_wb_value_LR.csv  f_wb_volume_LR.csv  f_ws_price_LR.csv  f_ws_value_LR.csv
examples/Model_1/outputdata/tmp/: f_ms_value_LR.csv  f_rb_value_LR.csv  f_rp_price_LR.csv  f_rp_value_LR.csv  f_rp_volume_LR.csv  f_rs_price_LR.csv  f_ws_volume_LR.csv
examples/Model_1/reports/: clsEnterprise_LR_auto_base.txt  clsEnterprise_LR_man_base.txt
examples/Model_1/reports/compare/: clsEnterprise_LR_20251014.txt
examples/Model_1/reports/temp/: clsEnterprise_LR.txt
examples/Model_1/src/: clsEnterprise.cpp
examples/Progress_example/: CMakeLists.txt  main.cpp  readme.txt
examples/SKU_example/: CMakeLists.txt  main.cpp  readme.txt
examples/Storage_example/: CMakeLists.txt  main.cpp  readme.txt
examples/Storage_stress_test/: CMakeLists.txt  main.cpp  readme.txt
libsource/: CMakeLists.txt  Impex_lib.cpp  Impex_module.h  LongReal_lib.cpp  LongReal_module.h  baseproject_lib.cpp  baseproject_module.h  common_values.hpp  manufact_lib.cpp  manufact_module.h  progress_module.hpp  readme.txt  warehouse_lib.cpp  warehouse_module.h
